--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "doc/_themes"]
 	path = doc/_themes
-	url = https://github.com/mitsuhiko/flask-sphinx-themes.git
+	url = git://github.com/mitsuhiko/flask-sphinx-themes.git
+
+[submodule "doc/example/complete/static/javascript/TeddyBar"]
+	path = doc/example/complete/static/javascript/TeddyBar
+	url = git://github.com/Kozea/TeddyBar.git
