--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "doc/example/complete/static/javascript/TeddyBar"]
 	path = doc/example/complete/static/javascript/TeddyBar
 	url = git://github.com/Kozea/TeddyBar.git
+[submodule "flask-sphinx-themes"]
+	path = flask-sphinx-themes
+	url = git://github.com/Kozea/flask-sphinx-themes.git
