--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,4 @@ build-dir  = docs/_build
 #all_files  = 1
 
 [upload_sphinx] # Sphinx-PyPI-upload
-upload-dir = docs/_build/html
+upload-dir = docs/_pypi_redirect
